--- a/lol_game_predictor_nn.ipynb
+++ b/lol_game_predictor_nn.ipynb
@@ -664,9 +664,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 65,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.5190910580652209"
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['label'].mean()"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
